--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Devolvi",
-    "short_name": "Devolvi",
+    "name": "Food Record",
+    "short_name": "Food Record",
     "description": "Keeping records for our employee.",
     "icons": [
       {
